--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "workspace",
-  "version": "0.3.1",
+  "name": "@kumori/workspace",
+  "version": "1.0.0",
   "description": "SaaSDK Workspace management library",
   "main": "build/src/index.js",
   "scripts": {
@@ -18,7 +18,9 @@
     "@taskr/shell": "^1.1.0",
     "@taskr/typescript": "^1.1.0",
     "@types/archiver": "^2.0.1",
+    "@types/commander": "^2.11.0",
     "@types/express": "^4.0.39",
+    "@types/mkdirp": "^0.5.1",
     "@types/mocha": "^2.2.41",
     "@types/ncp": "^2.0.1",
     "@types/node": "^7.0.12",
@@ -39,8 +41,6 @@
     "tslint-config-standard": "^6.0.1"
   },
   "dependencies": {
-    "@types/commander": "^2.11.0",
-    "@types/mkdirp": "^0.5.1",
     "admission-client": "git+ssh://git@gitlab.com:ECloud/admission-client#master",
     "archiver": "^2.1.0",
     "chalk": "^2.3.0",
