--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kumori/workspace",
   "version": "1.0.0",
-  "description": "SaaSDK Workspace management library",
+  "description": "Workspace management library",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
