--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "author": "Kumori Systems <info@kumori.systems>",
   "license": "MIT",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/kumori-systems/workspace.git"
+  },
   "devDependencies": {
     "@taskr/clear": "^1.1.0",
     "@taskr/shell": "^1.1.0",
@@ -41,17 +45,17 @@
     "tslint-config-standard": "^6.0.1"
   },
   "dependencies": {
-    "@kumori/admission-client": "https://github.com/kumori-systems/admission-client.git#master",
+    "@kumori/admission-client": "1.0.0",
     "@kumori/runtime": "1.0.0",
-    "archiver": "^2.1.0",
-    "chalk": "^2.3.0",
-    "denodeify": "^1.2.1",
-    "dot": "^1.1.2",
-    "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
-    "read": "^1.0.7",
-    "request": "^2.81.0",
-    "rimraf": "^2.6.2",
-    "uuid": "^3.2.1"
+    "archiver": "2.1.0",
+    "chalk": "2.3.0",
+    "denodeify": "1.2.1",
+    "dot": "1.1.2",
+    "mkdirp": "0.5.1",
+    "ncp": "2.0.0",
+    "read": "1.0.7",
+    "request": "2.81.0",
+    "rimraf": "2.6.2",
+    "uuid": "3.2.1"
   }
 }
