--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kumori/workspace",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "Workspace management library",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -15,8 +15,8 @@
   "author": "Kumori Systems <info@kumori.systems>",
   "license": "MIT",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/kumori-systems/workspace.git"
+    "type": "git",
+    "url": "https://github.com/kumori-systems/workspace.git"
   },
   "devDependencies": {
     "@taskr/clear": "^1.1.0",
