--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kumori/workspace",
-  "version": "1.0.1-0",
+  "version": "1.0.0",
   "description": "Workspace management library",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
