--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "tslint-config-standard": "^6.0.1"
   },
   "dependencies": {
-    "@kumori/admission-client": "1.0.0",
-    "@kumori/runtime": "1.0.0",
+    "@kumori/admission-client": "^1.0.0",
+    "@kumori/runtime": "^1.0.1",
     "@types/form-data": "^2.2.1",
     "@types/socket.io-client": "^1.4.32",
     "archiver": "2.1.0",
