--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "read": "1.0.7",
     "request": "2.81.0",
     "rimraf": "2.6.2",
-    "uuid": "3.2.1"
+    "sao": "^0.22.17",
+    "uuid": "3.2.1",
+    "yeoman-environment": "^2.2.0"
   }
 }
