Tests adapted to use the new yeoman generators

--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "chalk": "2.3.0",
     "denodeify": "1.2.1",
     "dot": "1.1.2",
+    "generator-kumori-workspace": "git+ssh://git@gitlab.com/jbgisber/generator-kumori-workspace.git#master",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "read": "1.0.7",
+    "regenerator-runtime": "^0.12.0",
     "request": "2.81.0",
     "rimraf": "2.6.2",
     "sao": "^0.22.17",
