--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.15.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "mock-require": "^3.0.2",
     "nyc": "^10.2.0",
     "pkg": "^4.2.5",
     "read": "^1.0.7",
