--- a/package.json
+++ b/package.json
@@ -23,27 +23,24 @@
     "@taskr/clear": "^1.1.0",
     "@taskr/shell": "^1.1.0",
     "@taskr/typescript": "^1.1.0",
-    "@types/archiver": "^2.0.1",
-    "@types/commander": "^2.11.0",
-    "@types/express": "^4.0.39",
-    "@types/mkdirp": "^0.5.1",
-    "@types/mocha": "^2.2.41",
+    "@types/archiver": "^2.1.2",
+    "@types/commander": "^2.12.2",
+    "@types/express": "^4.16.0",
+    "@types/mkdirp": "^0.5.2",
+    "@types/mocha": "^2.2.48",
     "@types/ncp": "^2.0.1",
-    "@types/node": "^7.0.12",
+    "@types/node": "^7.0.70",
     "@types/rimraf": "^2.0.2",
     "@types/should": "^8.3.0",
-    "denodeify": "^1.2.1",
-    "express": "^4.15.2",
+    "express": "^4.16.3",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mock-require": "^3.0.2",
-    "nyc": "^10.2.0",
-    "pkg": "^4.2.5",
-    "read": "^1.0.7",
-    "request": "^2.81.0",
+    "nyc": "^13.1.0",
+    "pkg": "^4.3.4",
     "should": "^11.2.1",
     "taskr": "^1.1.0",
-    "tslint": "^5.8.0",
+    "tslint": "^5.11.0",
     "tslint-config-standard": "^6.0.1"
   },
   "dependencies": {
@@ -51,18 +48,18 @@
     "@kumori/runtime": "^1.1.1",
     "@types/form-data": "^2.2.1",
     "@types/socket.io-client": "^1.4.32",
-    "archiver": "2.1.0",
-    "chalk": "2.3.0",
-    "denodeify": "1.2.1",
-    "dot": "1.1.2",
-    "mkdirp": "0.5.1",
-    "ncp": "2.0.0",
-    "read": "1.0.7",
-    "regenerator-runtime": "^0.12.0",
-    "request": "2.81.0",
-    "rimraf": "2.6.2",
+    "archiver": "^3.0.0",
+    "chalk": "^2.4.1",
+    "denodeify": "^1.2.1",
+    "dot": "^1.1.2",
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
+    "read": "^1.0.7",
+    "regenerator-runtime": "^0.12.1",
+    "request": "^2.88.0",
+    "rimraf": "^2.6.2",
     "sao": "^0.22.17",
-    "uuid": "3.2.1",
-    "yeoman-environment": "^2.2.0"
+    "uuid": "^3.3.2",
+    "yeoman-environment": "^2.3.3"
   }
 }
