--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kumori/workspace",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Workspace management library",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -19,47 +19,47 @@
     "url": "https://github.com/kumori-systems/workspace.git"
   },
   "devDependencies": {
-    "@kumori/generator-workspace": "1.1.2",
-    "@taskr/clear": "^1.1.0",
-    "@taskr/shell": "^1.1.0",
-    "@taskr/typescript": "^1.1.0",
-    "@types/archiver": "^2.1.2",
-    "@types/commander": "^2.12.2",
-    "@types/express": "^4.16.0",
-    "@types/mkdirp": "^0.5.2",
-    "@types/mocha": "^2.2.48",
-    "@types/ncp": "^2.0.1",
-    "@types/node": "^7.0.70",
-    "@types/rimraf": "^2.0.2",
-    "@types/should": "^8.3.0",
-    "express": "^4.16.3",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
-    "mock-require": "^3.0.2",
-    "nyc": "^13.1.0",
-    "pkg": "^4.3.4",
-    "should": "^11.2.1",
-    "taskr": "^1.1.0",
-    "tslint": "^5.11.0",
-    "tslint-config-standard": "^6.0.1"
+    "@kumori/generator-workspace": "1.1.8",
+    "@taskr/clear": "1.1.0",
+    "@taskr/shell": "1.1.0",
+    "@taskr/typescript": "1.1.0",
+    "@types/archiver": "2.1.2",
+    "@types/commander": "2.12.2",
+    "@types/express": "4.16.1",
+    "@types/mkdirp": "0.5.2",
+    "@types/mocha": "5.2.5",
+    "@types/ncp": "2.0.1",
+    "@types/node": "10.12.23",
+    "@types/rimraf": "2.0.2",
+    "@types/should": "13.0.0",
+    "express": "4.16.4",
+    "istanbul": "0.4.5",
+    "mocha": "5.2.0",
+    "mock-require": "3.0.3",
+    "nyc": "13.2.0",
+    "pkg": "4.3.7",
+    "should": "13.2.3",
+    "taskr": "1.1.0",
+    "tslint": "5.12.1",
+    "tslint-config-standard": "8.0.1"
   },
   "dependencies": {
     "@kumori/admission-client": "1.0.2",
-    "@kumori/runtime": "1.1.2",
-    "@types/form-data": "^2.2.1",
-    "@types/socket.io-client": "^1.4.32",
-    "archiver": "^3.0.0",
-    "chalk": "^2.4.1",
-    "denodeify": "^1.2.1",
-    "dot": "^1.1.2",
-    "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
-    "read": "^1.0.7",
-    "regenerator-runtime": "^0.12.1",
-    "request": "^2.88.0",
-    "rimraf": "^2.6.2",
-    "sao": "^0.22.17",
-    "uuid": "^3.3.2",
-    "yeoman-environment": "^2.3.3"
+    "@kumori/runtime": "1.1.3",
+    "@types/form-data": "2.2.1",
+    "@types/socket.io-client": "1.4.32",
+    "archiver": "3.0.0",
+    "chalk": "2.4.2",
+    "denodeify": "1.2.1",
+    "dot": "1.1.2",
+    "mkdirp": "0.5.1",
+    "ncp": "2.0.0",
+    "read": "1.0.7",
+    "regenerator-runtime": "0.13.1",
+    "request": "2.88.0",
+    "rimraf": "2.6.3",
+    "sao": "1.6.1",
+    "uuid": "3.3.2",
+    "yeoman-environment": "2.3.4"
   }
 }
